--- a/BusinessAccess/BusinessAccess.csproj
+++ b/BusinessAccess/BusinessAccess.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accounts\DownloadExcelAccountInfo.cs" />
     <Compile Include="MutualFunds\CommonRepository.cs" />
     <Compile Include="MutualFunds\DashboardRepository.cs" />
     <Compile Include="MutualFunds\MutualFundsRepository.cs" />
