--- a/PersonlaFinance/packages.config
+++ b/PersonlaFinance/packages.config
@@ -1,44 +1,52 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="amcharts" version="3.14.5" targetFramework="net451" />
-  <package id="bootstrap" version="3.3.6" targetFramework="net451" />
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
-  <package id="datatables.net" version="1.10.11" targetFramework="net451" />
-  <package id="DotNetOpenAuth.AspNet" version="4.1.4.12333" targetFramework="net451" />
-  <package id="DotNetOpenAuth.Core" version="4.1.4.12333" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.1.4.12333" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net451" />
-  <package id="EntityFramework" version="5.0.0" targetFramework="net451" />
-  <package id="jQuery" version="2.2.3" targetFramework="net451" />
-  <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net451" />
-  <package id="jQuery.Validation" version="1.15.0" targetFramework="net451" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
+  <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
+  <package id="datatables.net" version="1.10.11" targetFramework="net472" />
+  <package id="DotNetOpenAuth.AspNet" version="4.3.4.13329" targetFramework="net472" />
+  <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net472" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net472" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net472" />
+  <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net472" />
+  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="jQuery" version="2.2.4" targetFramework="net472" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="knockoutjs" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.30506.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages.WebData" version="2.0.20710.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net451" />
-  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="2.0.30506.0" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30116.0" targetFramework="net451" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="4.0.30506" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebHelpers" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages.OAuth" version="2.0.30506.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages.WebData" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
+  <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net472" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net451" />
-  <package id="Moment.js" version="2.13.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
-  <package id="System.Spatial" version="5.2.0" targetFramework="net451" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net451" />
-  <package id="Unity.Mvc4" version="1.5.0.0" targetFramework="net451" />
-  <package id="WebGrease" version="1.3.0" targetFramework="net451" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Moment.js" version="2.24.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
+  <package id="popper.js" version="1.14.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Spatial" version="5.8.4" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="4.1.2" targetFramework="net472" />
+  <package id="Unity.Container" version="5.10.2" targetFramework="net472" />
+  <package id="Unity.Mvc" version="5.10.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
