--- a/Utilities/packages.config
+++ b/Utilities/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net461" />
+  <package id="NLog" version="4.6.3" targetFramework="net472" />
+  <package id="NLog.Config" version="4.6.3" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.6.3" targetFramework="net472" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net461" />
 </packages>
