--- a/DownloadFundsData/App.config
+++ b/DownloadFundsData/App.config
@@ -5,6 +5,8 @@
     <add name="PersonalFinance" connectionString="data source=KANTH-PC;initial catalog=PersonalFinance;persist security info=True;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
     <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
          providerName="System.Data.SqlClient" />
+    <add name="Investments" connectionString="data source=KANTH-PC;initial catalog=Investments;persist security info=True;Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
