--- a/PersonlaFinance/Web.config
+++ b/PersonlaFinance/Web.config
@@ -12,16 +12,7 @@
 			<section name="messaging" type="DotNetOpenAuth.Configuration.MessagingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
 			<section name="reporting" type="DotNetOpenAuth.Configuration.ReportingElement, DotNetOpenAuth.Core" requirePermission="false" allowLocation="true" />
 		<section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" /><section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" /></sectionGroup></configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PersonlaFinance-20160516195213;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PersonlaFinance-20160516195213.mdf" providerName="System.Data.SqlClient" />
-    <add name="PersonalFinance" connectionString="data source=KANTH-PC;initial catalog=PersonalFinance;persist security info=True;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-    <add name="HomeTransactions" connectionString="data source=KANTH-PC;initial catalog=Home;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-    <add name="Investments" connectionString="data source=KANTH-PC;initial catalog=Investments;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource=".\ConnectionStrings\connections.config"></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
