--- a/DownloadFundsData/DownloadFundsData.csproj
+++ b/DownloadFundsData/DownloadFundsData.csproj
@@ -86,6 +86,9 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="ConnectionStrings\connections.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
