--- a/DownloadNavHistory/DownloadNavHistory.csproj
+++ b/DownloadNavHistory/DownloadNavHistory.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="ConnectionStrings\connections.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessAccess\BusinessAccess.csproj">
