--- a/PersonalAPI/Web.config
+++ b/PersonalAPI/Web.config
@@ -8,12 +8,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PersonalAPI-20180305205112;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PersonalAPI-20180305205112.mdf" />
-    <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-PersonalAPI-20190324163839;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PersonalAPI-20190324163839.mdf" />-->
-  </connectionStrings>
+  <connectionStrings configSource=".\ConnectionStrings\connections.config"></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
