--- a/DownloadFundsData/App.config
+++ b/DownloadFundsData/App.config
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PersonlaFinance-20160516195213;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PersonlaFinance-20160516195213.mdf" providerName="System.Data.SqlClient"/>
-    <add name="PersonalFinance" connectionString="data source=KANTH-PC;initial catalog=PersonalFinance;persist security info=True;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
-    <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-    <add name="Investments" connectionString="data source=KANTH-PC;initial catalog=Investments;persist security info=True;Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource=".\ConnectionStrings\connections.config"></connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
