--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLHelper.cs" />
     <Compile Include="StocksDataAccess.cs" />
+    <Compile Include="Stocks\StocksDataAccess.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessEntities\BusinessEntities.csproj">
