--- a/BusinessAccess/BusinessAccess.csproj
+++ b/BusinessAccess/BusinessAccess.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MutualFunds\MutualFundsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StocksBusinessAccess.cs" />
+    <Compile Include="Stocks\StocksRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessEntities\BusinessEntities.csproj">
