--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\DownloadExcelAccountInfo.cs" />
+    <Compile Include="BaseDataAccess.cs" />
     <Compile Include="ExpensesTracker\ExpensesTrackerDataAccess.cs" />
     <Compile Include="Logging\LoggingDataAccess.cs" />
     <Compile Include="CommonDataAccess.cs" />
