- update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,77 @@ packages/
 /SQL DB Profiles
 /Utilities/bin
 /Utilities/obj
+*.dbmdl
+*.jfm
+/Content/bootstrap*.css
+/Content/themes
+/Scripts/esm
+/Scripts/umd
+/Scripts/Widgets/
+/PersonlaFinance/Content
+/PersonlaFinance/Content/bootstrap.css
+/PersonlaFinance/Content/bootstrap.css.map
+/PersonlaFinance/Content/bootstrap.min.css
+/PersonlaFinance/Content/bootstrap.min.css.map
+/PersonlaFinance/Content/bootstrap-theme.css
+/PersonlaFinance/Content/bootstrap-theme.css.map
+/PersonlaFinance/Content/bootstrap-theme.min.css
+/PersonlaFinance/Content/bootstrap-theme.min.css.map
+/PersonlaFinance/Content/themes/base/accordion.css
+/PersonlaFinance/Content/themes/base/all.css
+/PersonlaFinance/Content/themes/base/autocomplete.css
+/PersonlaFinance/Content/themes/base/base.css
+/PersonlaFinance/Content/themes/base/button.css
+/PersonlaFinance/Content/themes/base/core.css
+/PersonlaFinance/Content/themes/base/datepicker.css
+/PersonlaFinance/Content/themes/base/dialog.css
+/PersonlaFinance/Content/themes/base/draggable.css
+/PersonlaFinance/Content/themes/base/menu.css
+/PersonlaFinance/Content/themes/base/progressbar.css
+/PersonlaFinance/Content/themes/base/resizable.css
+/PersonlaFinance/Content/themes/base/selectable.css
+/PersonlaFinance/Content/themes/base/selectmenu.css
+/PersonlaFinance/Content/themes/base/slider.css
+/PersonlaFinance/Content/themes/base/sortable.css
+/PersonlaFinance/Content/themes/base/spinner.css
+/PersonlaFinance/Content/themes/base/tabs.css
+/PersonlaFinance/Content/themes/base/theme.css
+/PersonlaFinance/Content/themes/base/tooltip.css
+/PersonlaFinance/Content/bootstrap-*map
+/PersonlaFinance/Content/themes/
+/PersonlaFinance/Scripts/umd/popper.js
+/PersonlaFinance/Scripts/umd/popper.js.map
+/PersonlaFinance/Scripts/umd/popper.min.js
+/PersonlaFinance/Scripts/umd/popper.min.js.map
+/PersonlaFinance/Scripts/umd/popper-utils.js
+/PersonlaFinance/Scripts/umd/popper-utils.js.map
+/PersonlaFinance/Scripts/umd/popper-utils.min.js
+/PersonlaFinance/Scripts/umd/popper-utils.min.js.map
+/PersonlaFinance/Content/bootstrap.css
+/PersonlaFinance/Content/bootstrap.css.map
+/PersonlaFinance/Content/bootstrap.min.css
+/PersonlaFinance/Content/bootstrap.min.css.map
+/PersonlaFinance/Content/bootstrap-theme.css
+/PersonlaFinance/Content/bootstrap-theme.css.map
+/PersonlaFinance/Content/bootstrap-theme.min.css
+/PersonlaFinance/Content/bootstrap-theme.min.css.map
+/PersonlaFinance/Content/themes/base/accordion.css
+/PersonlaFinance/Content/themes/base/all.css
+/PersonlaFinance/Content/themes/base/autocomplete.css
+/PersonlaFinance/Content/themes/base/base.css
+/PersonlaFinance/Content/themes/base/button.css
+/PersonlaFinance/Content/themes/base/core.css
+/PersonlaFinance/Content/themes/base/datepicker.css
+/PersonlaFinance/Content/themes/base/dialog.css
+/PersonlaFinance/Content/themes/base/draggable.css
+/PersonlaFinance/Content/themes/base/menu.css
+/PersonlaFinance/Content/themes/base/progressbar.css
+/PersonlaFinance/Content/themes/base/resizable.css
+/PersonlaFinance/Content/themes/base/selectable.css
+/PersonlaFinance/Content/themes/base/selectmenu.css
+/PersonlaFinance/Content/themes/base/slider.css
+/PersonlaFinance/Content/themes/base/sortable.css
+/PersonlaFinance/Content/themes/base/spinner.css
+/PersonlaFinance/Content/themes/base/tabs.css
+/PersonlaFinance/Content/themes/base/theme.css
+/PersonlaFinance/Content/themes/base/tooltip.css
