--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -5,12 +5,7 @@
   -->
 <configuration>
   <connectionStrings configSource=".\ConnectionStrings\connections.config"></connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <appSettings configSource=".\AppSettings\App.config"></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
