--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -55,13 +55,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigManager.cs" />
     <Compile Include="Conversions.cs" />
     <Compile Include="DBLogging.cs" />
     <Compile Include="FileLogger.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WriteToFile.cs" />
+    <Compile Include="FileOperations.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
