--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,21 @@ packages/
 /PersonlaFinance/Content/themes/base/tabs.css
 /PersonlaFinance/Content/themes/base/theme.css
 /PersonlaFinance/Content/themes/base/tooltip.css
+/PersonalAPI/PersonalAPI.csproj
+/PersonalAPI/PersonalAPI.csproj.user
+/PersonalAPI/Views/Web.config
+/PersonalAPI/PersonalAPI.csproj
+/PersonalAPI/PersonalAPI.csproj
+*.csproj.user
+/PersonalAPI/PersonalAPI.csproj
+/PersonalAPI/PersonalAPI.csproj.user
+/PersonalAPI/Views/Web.config
+/PersonlaFinance/Content/bootstrap.css
+/PersonlaFinance/Content/bootstrap.css.map
+/PersonlaFinance/Content/bootstrap.min.css
+/DownloadFundsData/AppSettings
+/PersonlaFinance/AppSettings
+/PersonlaFinance/Data.7z
+/Utilities/NLog.xsd
+/Utilities/NLog.config
+/WebApi/AppSettings
