--- a/WebApi/ConnectionStrings/connections.config
+++ b/WebApi/ConnectionStrings/connections.config
@@ -1,3 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-</configuration>
+﻿<connectionStrings>
+  <add name="PersonalFinance" connectionString="data source=KANTH-PC;initial catalog=PersonalFinance;persist security info=True;Integrated Security=SSPI;" 
+       providerName="System.Data.SqlClient" />
+  <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+  <add name="HomeTransactions" connectionString="data source=KANTH-PC;initial catalog=Home;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+  <add name="Investments" connectionString="data source=KANTH-PC;initial catalog=Investments;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+</connectionStrings>
