--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -223,6 +223,13 @@
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
     <Content Include="ConnectionStrings\connections.config" />
+    <Content Include="Data\ExpensesTracker\AccountDetails.json" />
+    <Content Include="Data\ExpensesTracker\AccountTypes.json" />
+    <Content Include="Data\ExpensesTracker\ExpenseGroups.json" />
+    <Content Include="Data\ExpensesTracker\ExpenseSubGroups.json" />
+    <Content Include="AppSettings\App.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
