--- a/WebApi/ConnectionStrings/connections.config
+++ b/WebApi/ConnectionStrings/connections.config
@@ -1,3 +1,3 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-</configuration>
+﻿<connectionStrings>
+  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-api-20180401160852;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-api-20180401160852.mdf" />
+</connectionStrings>
