--- a/BusinessEntities/BusinessEntities.csproj
+++ b/BusinessEntities/BusinessEntities.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Contracts\MutualFunds\IMutualFundDataAccess.cs" />
     <Compile Include="Contracts\MutualFunds\IMutualFundsBusinessAccess.cs" />
     <Compile Include="Entities\Accounts\AccountMappingDetails.cs" />
+    <Compile Include="Entities\CommonEntities.cs" />
     <Compile Include="Entities\Expenses\ExpenseTracker.cs" />
     <Compile Include="Entities\MutualFunds\Common.cs" />
     <Compile Include="Entities\MutualFunds\Dashboard.cs" />
