--- a/BusinessAccess/BusinessAccess.csproj
+++ b/BusinessAccess/BusinessAccess.csproj
@@ -44,6 +44,7 @@
     <Compile Include="HomeExpenses\ExpensesTrackerRepository.cs" />
     <Compile Include="MutualFunds\CommonRepository.cs" />
     <Compile Include="MutualFunds\DashboardRepository.cs" />
+    <Compile Include="MutualFunds\FundsRepository.cs" />
     <Compile Include="MutualFunds\MutualFundsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stocks\StocksRepository.cs" />
