--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ExpensesTrackerController.cs" />
+    <Compile Include="Controllers\FundsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MutualFundsController.cs" />
     <Compile Include="Controllers\StocksController.cs" />
