--- a/DownloadFundsData/DownloadFundsData.csproj
+++ b/DownloadFundsData/DownloadFundsData.csproj
@@ -88,7 +88,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="AppSettings\App.config" />
-    <None Include="ConnectionStrings\connections.config" />
+    <None Include="ConnectionStrings\connections.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
