--- a/WebApi/ConnectionStrings/connections.config
+++ b/WebApi/ConnectionStrings/connections.config
@@ -1,3 +1,10 @@
 ﻿<connectionStrings>
-  <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-api-20180401160852;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-api-20180401160852.mdf" />
+  <add name="PersonalFinance" connectionString="data source=KANTH-PC;initial catalog=PersonalFinance;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+  <add name="Logging" connectionString="data source=KANTH-PC;initial catalog=Logging;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+  <add name="HomeTransactions" connectionString="data source=KANTH-PC;initial catalog=Home;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
+  <add name="Investments" connectionString="data source=KANTH-PC;initial catalog=Investments;persist security info=True;Integrated Security=SSPI;"
+       providerName="System.Data.SqlClient" />
 </connectionStrings>
