--- a/DownloadFundsData/packages.config
+++ b/DownloadFundsData/packages.config
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="dcsoup" version="1.0.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
-  <package id="Selenium.Firefox.WebDriver" version="0.23.0" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.10.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Selenium.Firefox.WebDriver" version="0.26.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net451" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net451" />
   <package id="Selenium.WebDriverBackedSelenium" version="3.141.0" targetFramework="net451" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
 </packages>
