--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Controllers\ExpensesTrackerController.cs" />
     <Compile Include="Controllers\FundsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IncomeController.cs" />
     <Compile Include="Controllers\MutualFundsController.cs" />
     <Compile Include="Controllers\StocksController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
