--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Accounts\AccountsDataAccess.cs" />
     <Compile Include="Accounts\DownloadExcelAccountInfo.cs" />
     <Compile Include="BaseDataAccess.cs" />
+    <Compile Include="DigitalCurrencyDataAccess.cs" />
     <Compile Include="ExpensesTracker\ExpensesTrackerDataAccess.cs" />
     <Compile Include="IncomeDataAccess.cs" />
     <Compile Include="Logging\LoggingDataAccess.cs" />
